[gd_scene load_steps=33 format=3 uid="uid://dc4s2546exwym"]

[ext_resource type="Script" path="res://src/main/scene/role/player/cat/cat.gd" id="1_5q50g"]
[ext_resource type="Texture2D" uid="uid://cc4uk5oijrbt2" path="res://src/main/assets/texture/role/light/light_128_128.png" id="2_f7lxw"]
[ext_resource type="Texture2D" uid="uid://js1rss2q238q" path="res://src/main/assets/texture/role/shadow/shadow_circle.png" id="3_0u20y"]
[ext_resource type="Texture2D" uid="uid://rflr7p5ft7jh" path="res://src/main/assets/texture/role/player/cat/Cat Sprite Sheet.png" id="4_mvjks"]
[ext_resource type="PackedScene" uid="uid://cgn4aqfmy6o7x" path="res://src/main/common/util/hurtbox/hurt_box.tscn" id="5_0rm4j"]
[ext_resource type="PackedScene" uid="uid://biujvetdqdbsl" path="res://src/main/common/util/detection/detection_box.tscn" id="6_7xov5"]
[ext_resource type="Texture2D" uid="uid://dexlh22o67s3s" path="res://src/main/assets/texture/GUI/exp_background.png" id="7_8yhxi"]
[ext_resource type="Texture2D" uid="uid://c1fc2btpwbq33" path="res://src/main/assets/texture/GUI/exp_progress.png" id="8_q4vyb"]
[ext_resource type="FontFile" uid="uid://cah4xl5efry1d" path="res://src/main/assets/font/tenderness.otf" id="9_fur3k"]
[ext_resource type="AudioStream" uid="uid://cghwx0grkgbw6" path="res://src/main/assets/sound/SoundEffect/levelup.ogg" id="10_x5shj"]
[ext_resource type="PackedScene" uid="uid://fsir03lntsbu" path="res://src/main/scene/ui/button/button.tscn" id="11_wpp0n"]
[ext_resource type="AudioStream" uid="uid://cdjj0epnnvlwd" path="res://src/main/assets/sound/SoundEffect/Victory.wav" id="12_m2s7q"]
[ext_resource type="AudioStream" uid="uid://b2u1gnq1nwdq0" path="res://src/main/assets/sound/SoundEffect/Lose.ogg" id="13_cchfx"]
[ext_resource type="Texture2D" uid="uid://dauugkrayup7i" path="res://src/main/assets/texture/GUI/healthbar.png" id="14_5iufg"]
[ext_resource type="Texture2D" uid="uid://wvmjt2chj6k6" path="res://src/main/assets/texture/GUI/health.png" id="15_e7a5w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_laalu"]
size = Vector2(7, 4.5)

[sub_resource type="Animation" id="Animation_a8fy2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_anpkg"]
resource_name = "claw"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61]
}

[sub_resource type="Animation" id="Animation_v2lce"]
resource_name = "clean1"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_f5u2j"]
resource_name = "clean2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_mvnrn"]
resource_name = "idle1"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_gqd3q"]
resource_name = "idle2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_gg550"]
resource_name = "jump"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [64, 65, 66, 67, 68, 69, 70]
}

[sub_resource type="Animation" id="Animation_neq3a"]
resource_name = "scare"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76, 77, 78, 79]
}

[sub_resource type="Animation" id="Animation_1lxro"]
resource_name = "sleep"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_ial8y"]
resource_name = "walk1"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -17), Vector2(0, -10), Vector2(0, -17)]
}

[sub_resource type="Animation" id="Animation_sp75e"]
resource_name = "walk2"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xq4c5"]
_data = {
"RESET": SubResource("Animation_a8fy2"),
"claw": SubResource("Animation_anpkg"),
"clean1": SubResource("Animation_v2lce"),
"clean2": SubResource("Animation_f5u2j"),
"idle1": SubResource("Animation_mvnrn"),
"idle2": SubResource("Animation_gqd3q"),
"jump": SubResource("Animation_gg550"),
"scare": SubResource("Animation_neq3a"),
"sleep": SubResource("Animation_1lxro"),
"walk1": SubResource("Animation_ial8y"),
"walk2": SubResource("Animation_sp75e")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ui7sg"]
size = Vector2(10, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_dr2xy"]
radius = 180.0

[sub_resource type="CircleShape2D" id="CircleShape2D_feakw"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_eij1f"]

[node name="Cat" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 0
motion_mode = 1
script = ExtResource("1_5q50g")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1080
limit_smoothed = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.25)
shape = SubResource("RectangleShape2D_laalu")

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = ExtResource("2_f7lxw")

[node name="Sprite2DShadow" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.313726)
position = Vector2(0, 3)
scale = Vector2(0.12, 0.05)
texture = ExtResource("3_0u20y")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -17)
texture = ExtResource("4_mvjks")
offset = Vector2(0, 4)
hframes = 8
vframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xq4c5")
}

[node name="HurtBox" parent="." instance=ExtResource("5_0rm4j")]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_ui7sg")

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTimer" type="Timer" parent="Attack"]
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
wait_time = 0.075

[node name="TornadoTimer" type="Timer" parent="Attack"]
wait_time = 3.0

[node name="TornadoAttackTimer" type="Timer" parent="Attack/TornadoTimer"]
wait_time = 0.2

[node name="JavelinBase" type="Node2D" parent="Attack"]

[node name="DetectionBox" parent="." instance=ExtResource("6_7xov5")]
collision_layer = 2
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" parent="DetectionBox" index="0"]
shape = SubResource("CircleShape2D_dr2xy")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_feakw")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_eij1f")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 40.0
scale = Vector2(3, 3)
value = 50.0
texture_under = ExtResource("7_8yhxi")
texture_progress = ExtResource("8_q4vyb")

[node name="LabelLevel" type="Label" parent="GUILayer/GUI/ExperienceBar"]
layout_mode = 0
offset_left = 540.0
offset_right = 640.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("9_fur3k")
theme_override_font_sizes/font_size = 16
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
process_mode = 2
visible = false
top_level = true
layout_mode = 0
offset_left = 850.0
offset_top = -470.0
offset_right = 1050.0
offset_bottom = -220.0
scale = Vector2(2, 2)

[node name="LabelLevelUp" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("9_fur3k")
text = "Level Up!
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="SndLevelUp" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
stream = ExtResource("10_x5shj")
volume_db = -10.0
pitch_scale = 2.0

[node name="DeathPanel" type="Panel" parent="GUILayer/GUI"]
process_mode = 2
visible = false
top_level = true
layout_mode = 0
offset_left = 850.0
offset_top = -550.0
offset_right = 1050.0
offset_bottom = -300.0
scale = Vector2(2, 2)

[node name="BtnMenu" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("11_wpp0n")]
layout_mode = 0
offset_left = 55.0
offset_top = 195.0
offset_right = 150.0
offset_bottom = 231.0
text = "Menu"

[node name="LabelResult" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("9_fur3k")
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SndVictory" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("12_m2s7q")
volume_db = -20.0

[node name="SndLose" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("13_cchfx")
volume_db = -20.0

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
self_modulate = Color(1, 1, 1, 0.501961)
layout_mode = 0
offset_left = 935.0
offset_top = 450.0
offset_right = 967.0
offset_bottom = 458.0
scale = Vector2(2, 2)
value = 50.0
texture_over = ExtResource("14_5iufg")
texture_progress = ExtResource("15_e7a5w")

[node name="LabelTime" type="Label" parent="GUILayer/GUI"]
layout_mode = 0
offset_left = 903.0
offset_top = 3.0
offset_right = 1017.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("9_fur3k")
theme_override_font_sizes/font_size = 50
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedWeapon" type="GridContainer" parent="GUILayer/GUI"]
layout_mode = 0
offset_left = 8.0
offset_top = 70.0
offset_right = 208.0
offset_bottom = 86.0
scale = Vector2(3, 3)
columns = 10

[node name="CollectedUpgrade" type="GridContainer" parent="GUILayer/GUI"]
layout_mode = 0
offset_left = 8.0
offset_top = 120.0
offset_right = 208.0
offset_bottom = 136.0
scale = Vector2(3, 3)
columns = 10

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer" to="." method="_on_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer/TornadoAttackTimer" to="." method="_on_tornado_attack_timer_timeout"]
[connection signal="body_entered" from="DetectionBox" to="." method="_on_detection_box_body_entered"]
[connection signal="body_exited" from="DetectionBox" to="." method="_on_detection_box_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="click_end" from="GUILayer/GUI/DeathPanel/BtnMenu" to="." method="_on_btn_menu_click_end"]

[editable path="HurtBox"]
[editable path="DetectionBox"]
